--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "jasmine",
-    "test-travis": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec ./test/*"
+    "test-travis":
+      "istanbul cover jasmine-node --captureExceptions spec/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "author": "Chuck Michael <chuckinabox11@gmail.com> (chuck-michael.com)",
   "license": "ISC",
   "devDependencies": {
     "jasmine": "^3.1.0",
     "mathjs": "^4.0.1",
-    "coveralls": "2.10.0",
-    "istanbul": "0.3.5",
-    "mocha": "2.0.0"
+    "coveralls": "^3.0.0",
+    "istanbul": "^0.4.5"
   },
   "dependencies": {},
   "repository": {
