--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "jasmine",
-    "test-travis":
-      "istanbul cover jasmine-node --captureExceptions spec/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    "test-travis": "istanbul cover jasmine-node --captureExceptions spec/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "author": "Chuck Michael <chuckinabox11@gmail.com> (chuck-michael.com)",
   "license": "ISC",
   "devDependencies": {
-    "jasmine": "^3.1.0",
-    "mathjs": "^4.0.1",
     "coveralls": "^3.0.0",
-    "istanbul": "^0.4.5"
+    "istanbul": "^0.4.5",
+    "jasmine": "^3.1.0",
+    "jasmine-node": "^1.14.5",
+    "mathjs": "^4.0.1"
   },
   "dependencies": {},
   "repository": {
