--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jasmine",
     "test-travis":
-      "istanbul cover jasmine-node --captureExceptions spec/ | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+      "istanbul cover jasmine-node --captureExceptions spec/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "author": "Chuck Michael <chuckinabox11@gmail.com> (chuck-michael.com)",
   "license": "ISC",
