--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: node_js
 node_js:
   - "6.4.0"
-npm:
-  -"5.6.0"
+before_install: dpkg --compare-versions `npm -v` ge 5.8 || npm i -g npm@^5.8
 script: "npm run-script test-travis"
 # Send coverage data to Coveralls
 after_script: "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
